tests/fixtures/fail/array_non_copy_element.sali
let Boxed = struct(value: i32)

let main(): i32 = {
  let values = [Boxed(42)]
  0
}
